--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
           <a
             href="/auth/google"
             class="text-white px-4 py-2 bg-green-500 rounded-md"
-            >Login with Google</a
+            >Sigh UP with Google</a
           >
         </div>
       </div>
