build user registration

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,16 @@
   <body class="bg-gray-100 font-roboto">
     <!-- Navbar -->
     <nav class="bg-blue-600 p-4">
+      <div class="container mx-auto flex justify-between items-center"></div>
       <div class="container mx-auto flex justify-between items-center">
         <a href="/" class="text-white text-2xl font-semibold">TechHorizon</a>
+        <div>
+          <a
+            href="/api/users"
+            class="text-white px-4 py-2 bg-green-500 rounded-md"
+            >Sigh UP</a
+          >
+        </div>
         <div>
           <a
             href="/auth/google"
@@ -71,5 +79,7 @@
         <p>&copy; 2024 TechHorizon | All rights reserved</p>
       </div>
     </footer>
+
+
   </body>
 </html>
